# devaiflow

./: .gitignore  .release-config.json  AGENTS.md  BRANCH_SOURCE_SELECTION.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAF_AGENTS.md  ISSUE_216_FIX_SUMMARY.md  QUICKREF.md  README.md  RELEASING.md  SECURITY.md  T-1.md  config.schema.json  coverage.json  demo_branch_selection.sh  manual_test_issue_216.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_active_full_error.sh  test_exact_sequence.sh
.github/: CODEOWNERS
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-state.json  identity.md  memory.md  token-ledger.json
demos/: demo-commands.txt  demo-github-workflow.sh
devflow/: __init__.py
docs/: 01-overview.md  02-installation.md  03-quick-start.md  04-session-management.md  05-1-github-issue-integration.md  05-2-jira-integration.md  05-jira-integration.md  06-configuration.md  07-commands.md  08-release-management.md  09-hierarchical-skills.md  11-troubleshooting.md  NON_INTERACTIVE_PARAMETERS.md  NOTEBOOKLM.md  README.md  ai-agent-support-matrix.md  alternative-model-providers.md  experimental-agents-validation-tracking.md  experimental-agents.md  issue-tracker-architecture.md  publishing-to-pypi.md  ssl-configuration.md  uninstall.md
integration-tests/: README.md  TEST_COLLABORATION_SCENARIO.md  TEST_JIRA_GREEN_PATH.md  configure_test_prompts.py  run_all_integration_tests.sh  setup_test_config.py  test_collaboration_workflow.sh  test_config.sh  test_cursor_agent.sh  test_devaiflow_home.sh  test_error_handling.sh  test_error_handling.sh.bak  test_feature_orchestration.sh  test_git_sync.sh  test_github_copilot_agent.sh  test_github_green_path.sh  test_installation_auto_close.sh  test_investigation.sh  test_investigation.sh.bak  test_jira_green_path.sh  test_jira_sync.sh  test_multi_project_workflow.sh  test_multi_repo.sh  test_multi_repo.sh.bak  test_readonly_commands.sh  test_session_lifecycle.sh  test_templates.sh  test_templates.sh.bak  test_time_tracking.sh  test_upgrade_project_path.sh  test_windsurf_agent.sh  test_workspace_mismatch.sh
tests/: README.md  T-1.md  TESTING_GUIDE.md  conftest.py  coverage.json  test_active_command.py  test_agent_commands.py  test_agent_flag.py  test_agent_interface.py  test_auto_template.py  test_backend_detection.py  test_backup_command.py  test_backup_manager.py  test_branch_conflict.py  test_branch_creation_no_sync_prompt.py  test_branch_from_specific_source.py  test_branch_import_sync.py  test_branch_prefetch.py  (+177 more)
(+273 files in other folders)
